# Surface-AQI-Identification-of-HCHO-Hotspots

./: .gitignore  README.md  app.py  pyproject.toml  requirements.txt
.github/workflows/: tests.yml
configs/: project_config.yaml
data/: README.md
gee/: sentinel5p_hcho_hotspot_template.js
outputs/: README.md
outputs/reports/: evaluation_metrics.csv
scripts/: analyze_fire_hcho_transport.py  build_training_table.py  detect_hcho_hotspots.py  download_cpcb.py  download_firms.py  generate_aqi_maps.py  plot_aqi_map.py  prepare_insat3d.py  prepare_meteorology.py  prepare_satellite_data.py  run_demo_workflow.py  train_model.py
src/surface_aqi_hcho/: __init__.py  aqi.py  cli.py  collocation.py  features.py  geo.py  hotspots.py  metrics.py  quality.py
src/surface_aqi_hcho.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
tests/: create_fixtures.py  test_aqi.py  test_cli.py  test_geo_collocation_quality.py  test_hotspots_metrics.py
tests/fixtures/: cpcb_sample.csv  era5_sample.parquet  firms_sample.csv  insat3d_sample.parquet  s5p_sample.parquet
