[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "surface-aqi-hcho"
version = "0.1.0"
description = "Satellite-based surface AQI development and HCHO hotspot identification over India."
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "numpy>=1.24",
  "pandas>=2.0",
  "xarray>=2023.1",
  "scikit-learn>=1.3",
  "scipy>=1.10",
  "geopandas>=0.14",
  "rasterio>=1.3",
  "rioxarray>=0.15",
  "matplotlib>=3.7",
  "cartopy>=0.22",
  "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.4", "ruff>=0.5"]
gee = ["earthengine-api>=0.1.400", "geemap>=0.32"]
deep-learning = ["torch>=2.0"]

[project.scripts]
surface-aqi-hcho = "surface_aqi_hcho.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.pytest.ini_options]
testpaths = ["tests"]
